--- a/src/theme.css
+++ b/src/theme.css
@@ -15,3 +15,19 @@
     color: var(--text-color-dark);
   }
   
+  header {
+    text-align: center; /* Centra el texto del encabezado */
+    font-size: 24px; /* Aumenta el tamaño del texto */
+  }
+  
+  .playlist-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 150px; 
+  }
+
+  body, code {
+    font: 'Consolas';
+  }
+  
